// Defines the API for a step using the SDK to talk to an engine.


syntax = "proto3";

option go_package = "github.com/apptreesoftware/go-workflow/pkg/core";

package core;

import "common.proto";

service EngineStepAPI {
    rpc CachePush (CachePushRequest) returns (CachePushResponse);
    rpc CachePull (CachePullRequest) returns (CachePullResponse);

    rpc QueueWorkflow (StepQueueWorkflowRequest) returns (StepQueueWorkflowResponse);
}


message StepQueueWorkflowRequest {
    Environment environment = 1;
    string workflow = 2;
    bytes input = 3;
}

message StepQueueWorkflowResponse {

}
